@@ -13,6 +13,8 @@ require 'cgi'
 module Rack
   module Adapter 
     class Rails
+      FILE_METHODS = %w(GET HEAD).freeze
+      
       def initialize(options={})
         @root   = options[:root]         || Dir.pwd
         @env    = options[:environment]  || 'development'
@@ -56,16 +58,20 @@ module Rack
       
       def call(env)
         path        = env['PATH_INFO'].chomp('/')
+        method      = env['REQUEST_METHOD']
         cached_path = (path.empty? ? 'index' : path) + ActionController::Base.page_cache_extension
         
-        if file_exist?(path)              # Serve the file if it's there
-          serve_file(env)
-        elsif file_exist?(cached_path)    # Serve the page cache if it's there
-          env['PATH_INFO'] = cached_path
-          serve_file(env)
-        else                              # No static file, let Rails handle it
-          serve_rails(env)
+        if FILE_METHODS.include?(method)
+          if file_exist?(path)              # Serve the file if it's there
+            return serve_file(env)
+          elsif file_exist?(cached_path)    # Serve the page cache if it's there
+            env['PATH_INFO'] = cached_path
+            return serve_file(env)
+          end
         end
+        
+        # No static file, let Rails handle it
+        serve_rails(env)
       end
     
       protected
